Release 4.2.0 (Dec 8, 2017)
----------------------------

* Support for Django-2.0

Release 4.1.2 (Jun 22, 2017)
----------------------------

* Fixed MANIFEST.in for Debian packaging.


Release 4.1.1 (May 24, 2017)
----------------------------

* Removed deprecated templatetag inclusion
* Added support for Python-3.6
* Added support for MS-SQL


Release 4.1.0 (Nov 24, 2016)
----------------------------

* Add support for Django-1.10
* Drop support for Django-1.7
* Moved Repository from Bitbucket to GitHub
* Moved documentation to https://django-treebeard.readthedocs.io/
* Moved continuous integration to https://travis-ci.org/django-treebeard/django-treebeard


Release 4.0.1 (May 1, 2016)
---------------------------

* Escape input in forms (Martin Koistinen / Divio)
* Clarification on model detail pages (Michael Huang)

Release 4.0 (Dec 28, 2015)
--------------------------

* Added support for 3.5 and Django 1.7, 1.8 and 1.9
* Django 1.6 is no longer supported.
* Remove deprecated backports needed for now unsupported Django versions
* Fixed a bug with queryset deletion not handling inheritance correctly.
* Assorted documentation fixes


Release 3.0 (Jan 18, 2015)
--------------------------

* Limited tests (and hence support) to Python 2.7+/3.4+ and Django 1.6+
* Removed usage of deprecated Django functions.
* Fixed documentation issues.
* Fixed issues in MoveNodeForm
* Added get_annotated_list_qs and max_depth for get_annotated_list


Release 2.0 (April 2, 2014)
---------------------------

* Stable release.


Release 2.0rc2 (March, 2014)
----------------------------

* Support models that use multi-table inheritance (Matt Wescott)
* Tree methods called on proxy models should consistently return instances
  of that proxy model (Matt Wescott)


Release 2.0rc1 (February, 2014)
-------------------------------

* Fixed unicode related issue in the template tags.
* Major documentation cleanup.
* More warnings on the use of managers.
* Faster MP's is_root() method.

