@@ -18,3 +18,4 @@ Contributions made by:
     * moberley
     * czare1
     * Fernando Gutierrez (xbito) 
+    * Jens Diemer
