@@ -1,3 +1,8 @@
+Release *dev*
+----------------------------
+
+* Bugfix issues #90: admin change list view and jsi18n load for Django-1.11
+
 Release 4.2.0 (Dec 8, 2017)
 ----------------------------
 
